[gd_scene load_steps=6 format=3 uid="uid://dvewtibqanhmb"]

[ext_resource type="PackedScene" uid="uid://dhy3cyp8rvdg7" path="res://NPCs/Melbourne/Skin/melbourne_skin.tscn" id="1_pboan"]
[ext_resource type="Script" uid="uid://crlgkpys74olg" path="res://NPCs/Melbourne/npc_melbourne.gd" id="1_uyyw6"]
[ext_resource type="Script" uid="uid://1t50wa0x67b6" path="res://NPCs/Melbourne/Skin/melbourne_skin.gd" id="3_uyyw6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pboan"]
height = 2.39591

[sub_resource type="SphereShape3D" id="SphereShape3D_uyyw6"]
radius = 4.0

[node name="npc_melbourne" type="CharacterBody3D" node_paths=PackedStringArray("where_head_is") groups=["npc"]]
script = ExtResource("1_uyyw6")
where_head_is = NodePath("where_head_is")

[node name="MelbourneSkin" parent="." node_paths=PackedStringArray("_look_at_bone", "_look_at_target") instance=ExtResource("1_pboan")]
script = ExtResource("3_uyyw6")
_look_at_bone = NodePath("mel/blacksmith/Skeleton3D/_look_at_bone")
_look_at_target = NodePath("../_look_at_target")

[node name="Skeleton3D" parent="MelbourneSkin/mel/blacksmith" index="0"]
bones/0/position = Vector3(0.0232775, 2.90528, -0.0066348)
bones/1/scale = Vector3(1.0097, 1.0097, 1.0097)
bones/3/rotation = Quaternion(8.19115e-10, 1.11552e-10, -0.0382773, 0.999267)
bones/3/scale = Vector3(0.990393, 0.990393, 0.990393)
bones/4/rotation = Quaternion(0.042232, -0.0158968, 0.0481249, 0.997822)
bones/5/position = Vector3(0.346592, 1.51225, 1.58121)
bones/6/position = Vector3(0.129127, 0.640335, 1.74953)
bones/6/rotation = Quaternion(0.44337, 0.550802, -0.551013, 0.443199)
bones/7/position = Vector3(-0.395653, 1.51225, 1.58121)
bones/8/position = Vector3(-0.129127, 0.640335, 1.74953)
bones/8/rotation = Quaternion(-0.443369, 0.550802, -0.551014, -0.443199)
bones/10/rotation = Quaternion(-0.000607316, -0.00107279, -0.710716, 0.703478)
bones/10/scale = Vector3(0.990391, 0.990391, 0.990392)
bones/11/rotation = Quaternion(-0.0373452, 0.0692269, -0.619962, 0.780679)
bones/12/rotation = Quaternion(0.248125, -1.09067e-07, 2.75758e-07, 0.968728)
bones/14/rotation = Quaternion(0.473423, 0.0690798, -0.126789, 0.868921)
bones/17/rotation = Quaternion(0.22027, 0.0321394, -0.140757, 0.964694)
bones/20/rotation = Quaternion(0.00475097, 0.000693254, -0.144385, 0.98951)
bones/23/rotation = Quaternion(-0.231812, -0.0338271, -0.140377, 0.961984)
bones/26/rotation = Quaternion(-0.529659, -0.0772863, -0.121962, 0.835831)
bones/27/rotation = Quaternion(-0.000607446, 0.00107257, 0.710716, 0.703478)
bones/27/scale = Vector3(0.990391, 0.990391, 0.990392)
bones/28/rotation = Quaternion(-0.0338871, -0.10148, 0.645019, 0.75664)
bones/29/rotation = Quaternion(0.338362, 1.46026e-09, -4.97166e-07, 0.941016)
bones/32/rotation = Quaternion(0.47767, -0.0270464, 0.0496406, 0.876719)
bones/33/rotation = Quaternion(-0.000204124, 6.78222e-06, 0.0330488, 0.999454)
bones/35/rotation = Quaternion(0.222247, -0.0125839, 0.0551123, 0.97335)
bones/36/rotation = Quaternion(-0.000134848, 4.46403e-06, 0.0330588, 0.999453)
bones/38/rotation = Quaternion(0.00479358, -0.000271418, 0.0565308, 0.998389)
bones/39/rotation = Quaternion(-0.0178953, 0.000591824, 0.0330479, 0.999293)
bones/41/rotation = Quaternion(-0.233893, 0.0132451, 0.0549652, 0.970617)
bones/42/rotation = Quaternion(-2.34934e-05, 7.83813e-07, 0.0330543, 0.999454)
bones/44/rotation = Quaternion(-0.534412, 0.0302597, 0.0477516, 0.843331)
bones/45/scale = Vector3(0.990393, 0.990393, 0.990398)
bones/46/rotation = Quaternion(0.700632, 0.0982683, 0.700115, 0.09642)
bones/47/rotation = Quaternion(-0.00183244, 0.000356217, 0.166917, 0.985969)
bones/49/rotation = Quaternion(0.700632, -0.0982784, -0.700113, 0.0964265)
bones/50/rotation = Quaternion(-0.0018358, -0.000356249, -0.16692, 0.985969)
bones/56/position = Vector3(1.24749, 2.38174, 0.435112)
bones/59/position = Vector3(-1.09521, 2.8348, 0.234365)

[node name="bigode_l" parent="MelbourneSkin/mel/blacksmith/Skeleton3D" index="15"]
transform = Transform3D(-0.180472, 0.983359, 0.0208478, 0.077591, 0.0353633, -0.996357, -0.980514, -0.178197, -0.082682, 0.152978, 6.22252, 1.80007)

[node name="bigode_r" parent="MelbourneSkin/mel/blacksmith/Skeleton3D" index="16"]
transform = Transform3D(-0.247176, -0.968729, 0.021599, -0.085429, -0.000417022, -0.996344, 0.965197, -0.248117, -0.0826545, -0.105067, 6.21779, 1.79083)

[node name="front_bang2" parent="MelbourneSkin/mel/blacksmith/Skeleton3D" index="17"]
transform = Transform3D(0.999191, -0.0111145, 0.0386363, 0.0183146, -0.729675, -0.683548, 0.0357893, 0.683702, -0.728882, 0.00228042, 8.59236, 1.18667)

[node name="apron2" parent="MelbourneSkin/mel/blacksmith/Skeleton3D" index="18"]
transform = Transform3D(1.0097, -2.83643e-09, 3.51335e-07, 1.89961e-08, -1.00793, -0.0597172, 3.50903e-07, 0.0597172, -1.00793, -0.0119164, 2.95886, 0.831275)

[node name="_look_at_bone" type="LookAtModifier3D" parent="MelbourneSkin/mel/blacksmith/Skeleton3D" index="19"]
influence = 0.0
target_node = NodePath("../../../../../_look_at_target")
bone_name = "neck_2"
bone = 3
duration = 1.0
ease_type = 2
use_angle_limitation = true
symmetry_limitation = true
primary_limit_angle = 2.31483
primary_damp_threshold = 1.0
secondary_limit_angle = 0.872665
secondary_damp_threshold = 1.0

[node name="AnimationTree" parent="MelbourneSkin" index="1"]
"parameters/blend look/add_amount" = 0

[node name="cs_mel" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_pboan")

[node name="_look_at_target" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="where_head_is" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Collisions" type="Node3D" parent="."]

[node name="_look_at_area" type="Area3D" parent="Collisions"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collisions/_look_at_area"]
shape = SubResource("SphereShape3D_uyyw6")
debug_color = Color(0.57, 0.5453, 0.1995, 0.239216)

[connection signal="body_entered" from="Collisions/_look_at_area" to="MelbourneSkin" method="_on_look_at_area_3d_entered"]
[connection signal="body_exited" from="Collisions/_look_at_area" to="MelbourneSkin" method="_on_look_at_area_3d_exited"]

[editable path="MelbourneSkin"]
[editable path="MelbourneSkin/mel"]
